# Jetson_Nano_Startup_Script

./: CMakeLists.txt  WSL2_BuildScript.sh  build_OpenCV_CUDA_venv  check_cuda.cpp  check_cuda.py  check_opencv_cuda  install_zsh_plugins  jetson_nano_start_up.sh  jetson_nano_start_up_OLD.sh
